-- Note that poppler is packaged after pango. if we have any issue in build (gtk2hs packages are
-- pretty entangled), please refer to pango and adjust this following the change made in pango.
Name:           poppler
Version:        0.15
License:        GPL-2
License-file:   COPYING
Copyright:      (c) 2001-2012, 2014-2016 The Gtk2Hs Team
Author:         Andy Stewart
Maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Custom
Cabal-Version:  >= 1.24
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs
bug-reports:    http://github.com/wavewave/poppler/issues
Synopsis:       Binding to the Poppler.
Description:    Poppler is a fork of the xpdf PDF viewer, to provide PDF rendering functionality as a shared
                library, to centralize the maintenance effort.
                And move to forward in a number of areas that don't fit within the goals of xpdf.
Category:       Graphics
Tested-With:    GHC == 7.10, GHC == 8.0
Extra-Source-Files: SetupWrapper.hs
                    hierarchy.list
                    template-hsc-gtk2hs.h
                    hspoppler.h

x-Types-File:      Graphics/UI/Gtk/Poppler/Types.chs
x-Types-ModName:   Graphics.UI.Gtk.Poppler.Types
x-Types-Forward:   *System.Glib.GObject
x-Types-Lib:       poppler
x-Types-Prefix:    poppler
x-Types-Tag:       poppler
x-Types-Hierarchy: hierarchy.list

Data-Dir:          demo
Data-Files:        PdfViewer.hs
                   Makefile

Source-Repository head
  type:         git
  location:     git://github.com/wavewave/poppler.git

flag gtk3
  description: compile with gtk3
  default: False

custom-setup
  setup-depends: base >= 4.6,
                 Cabal >= 2,
                 gtk2hs-buildtools >= 0.13.1

Library
        build-depends:  base >= 4 && < 5, array, containers,
                        mtl, bytestring,
                        glib >= 0.13,
                        cairo >= 0.13,
                        gtk3 >= 0.13
        build-tools:    gtk2hsC2hs, gtk2hsHookGenerator, gtk2hsTypeGen

        cpp-options:     -U__BLOCKS__ -Ubool -D__attribute__(A)=
        if os(darwin) || os(freebsd)
          cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=
        if os(windows)
          cpp-options: -D__USE_MINGW_ANSI_STDIO=1

        exposed-modules:
          Graphics.UI.Gtk.Poppler.Action
          Graphics.UI.Gtk.Poppler.Attachment
          Graphics.UI.Gtk.Poppler.Document
          Graphics.UI.Gtk.Poppler.FormField
          Graphics.UI.Gtk.Poppler.Layer
          Graphics.UI.Gtk.Poppler.Page
          Graphics.UI.Gtk.Poppler.Poppler
        other-modules:
          Graphics.UI.Gtk.Poppler.Enums
          Graphics.UI.Gtk.Poppler.Structs
          Graphics.UI.Gtk.Poppler.Types

        default-language:   Haskell98
        default-extensions: ForeignFunctionInterface
        x-c2hs-Header:  hspoppler.h
        include-dirs:   .
        includes:       hspoppler.h
        pkgconfig-depends: poppler-glib >= 0.12.4, cairo >= 1.2.0, gdk-3.0, pango
